<resources>
    <string name="app_name">VictorySongs</string>
    <string name="http">HTTP</string>
    <string name="raw">Raw</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="stop">Stop</string>
    <string name="loop">Loop</string>
    <string name="backward">Back</string>
    <string name="forward">Forw</string>

    <string name="denpobedi_lyrics"> День Победы как он был от нас далек
\nКак в костре потухшем таял уголек
\nБыли версты обгорелые в пыли
\nЭтот день мы приближали как могли
\nЭтот День Победы порохом пропах
\nЭтот праздник с сединою на висках
\nЭта радость со слезами на глазах
\nДень Победы День Победы
\nДень Победы
\nДни и ночи у мартеновских печей
\nНе смыкала наша Родина очей
\nДни и ночи битву трудную вели
\nЭтот день мы приближали как могли
\nЭтот День Победы порохом пропах
\nЭтот праздник с сединою на висках
\nЭта радость со слезами на глазах
\nДень Победы День Победы
\nДень Победы
\nЗдравствуй мама возвратились мы не все
\nБосиком бы пробежаться по росе
\nПол-Европы прошагали полЗемли
\nЭтот день мы приближали как могли
\nЭтот День Победы порохом пропах
\nЭтот праздник с сединою на висках
\nЭта радость со слезами на глазах
\nДень Победы День Победы
\nДень Победы
\nДень Победы порохом пропах
\nЭтот праздник с сединою на висках
\nЭта радость со слезами на глазах
\nДень Победы День Победы
\nДень Победы День Победы</string>

    <string name="katusha_lyrics"> Расцветали яблони и груши,
Поплыли туманы над рекой.
Выходила на берег Катюша,
На высокий берег на крутой.

Выходила, песню заводила
Про степного сизого орла,
Про того, которого любила,
Про того, чьи письма берегла.

Ой ты, песня, песенка девичья,
Ты лети за ясным солнцем вслед
И бойцу на дальнем пограничье
От Катюши передай привет.

Пусть он вспомнит девушку простую,
Пусть услышит, как она поёт,
Пусть он землю бережёт родную,
А любовь Катюша сбережёт.

Расцветали яблони и груши,
Поплыли туманы над рекой.
Выходила на берег Катюша,
На высокий берег на крутой.</string>

    <string name="posledniyBoi_lyrics">
    \nМы так давно, мы так давно не отдыхали.
    \nНам было просто не до отдыха с тобой.
    \nМы пол-Европы по-пластунски пропахали,
    \nИ завтра, завтра, наконец, последний бой.

    \nЕще немного, еще чуть-чуть,
    \nПоследний бой – он трудный самый
    \nА я в Россию, домой хочу,
    \nЯ так давно не видел маму!

    \nЧетвертый год нам нет житья от этих фрицев,
    \nЧетвертый год соленый пот и кровь рекой.
    \nА мне б в девчоночку в хорошую влюбиться,
    \nА мне б до Родины дотронуться рукой.

    \nЕще немного, еще чуть-чуть,
    \nПоследний бой – он трудный самый
    \nА я в Россию, домой хочу,
    \nЯ так давно не видел маму!

    \nПоследний раз сойдемся завтра в рукопашной,
    \nПоследний раз России сможем послужить,
    \nА за нее и помереть совсем не страшно,
    \nХоть каждый все-таки надеется дожить!

    \nЕще немного, еще чуть-чуть,
    \nПоследний бой – он трудный самый
    \nА я в Россию, домой хочу,
    \nЯ так давно не видел маму!</string>
</resources>
